# sgdash

./: .gitignore  CMakeLists.txt  README.md
assets/sfx/desktop/: Master.bank  Master.strings.bank
assets/tiled/: debug.lua
libs/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
src/: main.cpp
src/components/: actor_component.hpp  box_collider_component.hpp  camera_follow_component.hpp  damage_component.hpp  jump_component.hpp  player_controller_component.hpp  rigid_body_component.hpp  sprite_component.hpp  transform_component.hpp  wall_component.hpp
src/core/: LevelLoader.cpp  LevelLoader.h  asset_store.cpp  asset_store.hpp  joystick.hpp  level.cpp  level.hpp  levelloader.cpp  levelloader.hpp  logger.cpp  world.cpp  world.hpp
src/ecs/: ECS.cpp  ECS.h
src/essential/: LevelLoader.cpp  LevelLoader.h  asset_store.cpp  logger.cpp  world.cpp  world.hpp
src/events/: Event.h  EventBus.h
src/primitives/: actor_list.hpp
src/systems/: DrawSystem.cpp  DrawSystem.hpp  RenderSystem.h  camera_system.cpp  camera_system.hpp  collision_system.cpp  collision_system.hpp  damage_system.hpp  draw_system.cpp  draw_system.hpp  gravity_system.cpp  gravity_system.hpp  jump_system.cpp  jump_system.hpp  movement_system.cpp  movement_system.hpp  player_controller_system.cpp  player_controller_system.hpp  sound_system.cpp  sound_system.hpp
src/utilities/: lualoader.cpp  lualoader.hpp
